added notification feature
